aws-3tier-terraform/route-tables.json
{
    "RouteTables": [
        {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-00527416e6bcffe5a",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0bec31cdd22921c7d",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "3-tier-private-rt-2"
                }
            ],
            "VpcId": "vpc-0256655b0ee412b29",
            "OwnerId": "259030234749"
        },
        {
            "Associations": [],
            "PropagatingVgws": [],
            "RouteTableId": "rtb-076fc177c3425bde5",
            "Routes": [
                {
                    "DestinationCidrBlock": "10.0.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "NatGatewayId": "nat-0229759d367aefeba",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "3-tier-private-rt-1"
                }
            ],
            "VpcId": "vpc-0256655b0ee412b29",
            "OwnerId": "259030234749"
        }
    ]
}
